--- a/week-3/03-mongo/package.json
+++ b/week-3/03-mongo/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev" : "node --watch index.js",
-
+    "dev": "node --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.23.3",
+    "dotenv": "^17.2.0",
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "mongoose": "^8.0.3",
