--- a/week-3/04-mongo-with-jwt-auth/package.json
+++ b/week-3/04-mongo-with-jwt-auth/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+     "dev": "node --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,10 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.23.3",
+    "dotenv": "^17.2.0",
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "mongoose": "^8.0.3",
     "supertest": "^6.3.3",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "zod": "^4.0.5"
   }
 }
