--- a/week-3/04-mongo-with-jwt-auth/package.json
+++ b/week-3/04-mongo-with-jwt-auth/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-     "dev": "node --watch index.js",
+    "dev": "node --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.0",
     "express": "^4.18.2",
     "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.2",
