--- a/week-3/04-mongo-with-jwt-auth/.env
+++ b/week-3/04-mongo-with-jwt-auth/.env
@@ -1,2 +1,3 @@
 MONGO_URI="mongodb+srv://rayalravi2001:0QRdusyqQMhIqp07@cluster0.5qxphdu.mongodb.net/SkillShop?retryWrites=true&w=majority&appName=SkillShop"
 MODE="development"
+JWT_SECRET="your_jwt_secret_key"
